Pull up following revision(s) (requested by rin in ticket #829):

sys/kern/subr_localcount.c: revision 1.8

localcount: Update per-CPU total at splhigh.

Otherwise localcount_acquire/release in interrupt context may lose
counts.

Duration spent at splhigh is very short.
PR kern/58610: localcount(9) races with interrupts